--- a/OwnetTaskManager/OwnetTaskManager.csproj
+++ b/OwnetTaskManager/OwnetTaskManager.csproj
@@ -20,12 +20,17 @@
         </PackageReference>
         <PackageReference Include="Microsoft.Extensions.Configuration.AzureKeyVault" Version="3.1.24" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="System.Collections.NonGeneric" Version="4.3.0" />
     </ItemGroup>
 
     <ItemGroup>
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Repositories\" />
     </ItemGroup>
 
 </Project>
