--- a/OwnetTaskManager/OwnetTaskManager.csproj
+++ b/OwnetTaskManager/OwnetTaskManager.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="13.0.1" />
         <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.3.2" />
         <PackageReference Include="Azure.Identity" Version="1.12.1" />
         <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.6.0" />
