--- a/OwnetTaskManager/OwnetTaskManager.csproj
+++ b/OwnetTaskManager/OwnetTaskManager.csproj
@@ -20,6 +20,7 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.Extensions.Configuration.AzureKeyVault" Version="3.1.24" />
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.6" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
         <PackageReference Include="System.Collections.NonGeneric" Version="4.3.0" />
     </ItemGroup>
@@ -31,7 +32,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Repositories\" />
+      <Folder Include="Controllers\" />
     </ItemGroup>
 
 </Project>
