--- a/OwnetTaskManager/Properties/launchSettings.json
+++ b/OwnetTaskManager/Properties/launchSettings.json
@@ -17,7 +17,7 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5244",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     },
     "https": {
@@ -27,7 +27,7 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7140;http://localhost:5244",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     },
     "IIS Express": {
@@ -35,7 +35,7 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     }
   }
